# VoiceFlux

./: .gitignore  README.md  gradlew  settings.gradle.kts
.claude/memory/: MEMORY.md  project_voiceflux.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  fft_util.h  jni_bridge.cpp  voice_processor.cpp  voice_processor.h
app/src/main/cpp/effects/: distortion.cpp  distortion.h  eq_filter.cpp  eq_filter.h  formant_shifter.cpp  formant_shifter.h  pitch_shifter.cpp  pitch_shifter.h  reverb.cpp  reverb.h  robot_effect.cpp  robot_effect.h
app/src/main/java/com/voiceflux/app/: AudioEngine.kt  AudioService.kt  MainActivity.kt
app/src/main/java/com/voiceflux/app/data/: PresetRepository.kt  VoicePreset.kt
app/src/main/java/com/voiceflux/app/ui/: MainViewModel.kt  PresetAdapter.kt  WaveformView.kt
app/src/main/res/drawable/: bg_bottom_sheet.xml  bg_latency_chip.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  item_preset.xml  layout_sliders.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
